Launchpad automatic translations update.

--- a/po/es.po
+++ b/po/es.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-04-17 12:54+0000\n"
+"PO-Revision-Date: 2010-04-23 15:32+0000\n"
 "Last-Translator: DiegoJ <diegojromerolopez@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-04-18 03:50+0000\n"
+"X-Launchpad-Export-Date: 2010-04-24 03:53+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -561,6 +561,9 @@ msgid ""
 "href=\"http://bugs.edge.launchpad.net/gtg\">our Launchpad page</a>. If you "
 "have Apport installed, it will be started for you."
 msgstr ""
+" ha reventado. Informe del error en <a "
+"href=\"http://bugs.edge.launchpad.net/gtg\">nuestra página de Launchpad</a>. "
+"Si tiene Apport instalado se iniciará automáticamente."
 
 #: GTG/core/task.py:53
 msgid "My new task"
@@ -576,7 +579,7 @@ msgstr "Tareas sin etiquetas"
 
 #: GTG/core/firstrun_tasks.py:8
 msgid "Getting started with GTG"
-msgstr "Familiarizándose con GTG"
+msgstr "Empezar con GTG"
 
 #: GTG/core/firstrun_tasks.py:9
 msgid ""
@@ -592,6 +595,18 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link:"
 msgstr ""
+"Bienvenido a Getting Things Gnome!, su nuevo gestor de tareas.\n"
+"\n"
+"En GTG todo es una tarea. Desde construir un puente sobre el Océano Pacífico "
+"a cambiar una bombilla u organizar una fiesta. Cuando edita una tarea, se "
+"guarda automáticamente.\n"
+"\n"
+"Una vez que la tarea ha sido completada, puede pulsar el botón de "
+"&quot;Marcar como terminada&quot;. Si la tarea ya no es importante, pulse "
+"&quot;Descartar&quot;.\n"
+"\n"
+"Una tarea puede estar compuesta de muchas subtareas que aparecerán como "
+"enlaces en la descripción de ésta. Pulse en el siguiente enlace:"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid ""
@@ -605,6 +620,15 @@ msgid ""
 "need to do the subtask anymore.\n"
 "Other stuff you should read:"
 msgstr ""
+"Una vez que haya leído la tarea de arriba, márquela como terminada. Si no "
+"quiere hacer la tarea, márquela como descartada. Las tareas terminadas y "
+"descartadas están en el panel de tareas cerradas, oculto por defecto pero "
+"que puede verse activándolo en el menú Ver.\n"
+"\n"
+"Si elige cerrar la tarea actual, sus subtareas se cerrarán también. "
+"Consideramos que si ha logrado terminar una tarea dada, no necesita ya hacer "
+"las subtareas.\n"
+"Otras cosas que debería leer:"
 
 #: GTG/core/firstrun_tasks.py:26
 msgid ""
@@ -1055,8 +1079,8 @@ msgid ""
 "Please authenticate to Remember The Milk in the browser that is being opened "
 "now. When done, press OK"
 msgstr ""
-"Por favor, autentifícate con Remember The Milk en el navegador que se acaba "
-"de abrir. Cuando hayas finalizado, haz clic en aceptar."
+"Autentíquese con Remember The Milk en el navegador que se acaba de abrir. "
+"Cuando lo haya hecho, pulse aceptar."
 
 #: GTG/plugins/rtm_sync/rtmProxy.py:165
 msgid "saving critical object failed"
