--- a/po/fr.po
+++ b/po/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-04-24 10:26+0000\n"
+"PO-Revision-Date: 2010-04-26 06:29+0000\n"
 "Last-Translator: Emilien Klein <emilien+ubuntu@klein.st>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2010-04-25 03:46+0000\n"
+"X-Launchpad-Export-Date: 2010-04-27 03:43+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -872,7 +872,7 @@ msgstr "Préférences de Getting Things GNOME!"
 
 #: GTG/viewmanager/preferences.glade.h:9
 msgid "Hide closed tasks older than"
-msgstr ""
+msgstr "Cacher les tâches fermées plus vieilles que"
 
 #: GTG/viewmanager/preferences.glade.h:10
 msgid "Plugins"
@@ -880,15 +880,15 @@ msgstr "Greffons"
 
 #: GTG/viewmanager/preferences.glade.h:11
 msgid "Show task text preview"
-msgstr ""
+msgstr "Afficher l'aperçu du contenu de la tâche"
 
 #: GTG/viewmanager/preferences.glade.h:12
 msgid "Start Getting Things GNOME! on every login"
-msgstr ""
+msgstr "Démarrer Getting Things GNOME! à chaque démarrage"
 
 #: GTG/viewmanager/preferences.glade.h:13
 msgid "Storage"
-msgstr ""
+msgstr "Stockage"
 
 #: GTG/viewmanager/preferences.glade.h:14
 msgid "Task _Backends:"
@@ -904,13 +904,15 @@ msgstr "Confirmer la suppression de la tâche"
 
 #: GTG/plugins/evolution_sync/evolutionSync.py:28
 msgid "Synchronize with Evolution"
-msgstr ""
+msgstr "Synchroniser avec Evolution"
 
 #: GTG/plugins/tomboy/tomboy.py:81
 msgid ""
 "Tomboy/Gnote not found. Please install it or disable the Tomboy/Gnote plugin "
 "in GTG"
 msgstr ""
+"Tomboy/Gnote non trouvé. Vous devriez l'installer ou désactiver le greffon "
+"Tomboy/Gnote dans GTG"
 
 #: GTG/plugins/tomboy/tomboy.py:126
 msgid "Add Tomboy note"
@@ -921,6 +923,8 @@ msgid ""
 " was found on the system, but it doesn't provide a dbus interface. the "
 "Tomboy/Gnote plugin will not work with it."
 msgstr ""
+" a été trouvé sur votre système mais ne fournit pas d'interface dbus. Le "
+"greffon Tomboy/Gnote ne peut pas fonctionner."
 
 #: GTG/plugins/tomboy/tomboy.py:241
 msgid "That note does not exist!"
@@ -928,7 +932,7 @@ msgstr "Cette note n'existe pas !"
 
 #: GTG/plugins/tomboy/tomboy.py:246
 msgid "That note does not exist. Do you want to create a new one?"
-msgstr "Cette note n'existe pas. Voulez-vous en créer une nouvelle ?"
+msgstr "Cette note n'existe pas. Voulez-vous la créer ?"
 
 #: GTG/plugins/tomboy/tomboy.py:274
 msgid "This Tomboy note does not exist anymore. Do you want to create it?"
@@ -960,11 +964,11 @@ msgstr ""
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:5
 msgid "Associate with existing tag"
-msgstr "Associe avec un tag existant"
+msgstr "Associer avec une étiquette existante"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:6
 msgid "Associate with new tag"
-msgstr "Associe avec un nouveau tag"
+msgstr "Associer avec une nouvelle étiquette"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:7
 msgid "Geolocalized-tasks Preferences"
@@ -1000,11 +1004,11 @@ msgstr "Choisissez où sauvegarder votre liste"
 
 #: GTG/plugins/hamster/hamster.py:40
 msgid "Start task in Hamster"
-msgstr ""
+msgstr "Commencer une tâche dans Hamster"
 
 #: GTG/plugins/hamster/hamster.py:156
 msgid "Start in Hamster"
-msgstr ""
+msgstr "Commencer dans Hamster"
 
 #: GTG/plugins/hamster/hamster.py:158
 msgid "Start a new activity in Hamster Time"
@@ -1040,7 +1044,7 @@ msgstr ""
 
 #: GTG/plugins/rtm_sync/rtm_sync.py:187
 msgid "Please retry."
-msgstr ""
+msgstr "Veuillez réessayer."
 
 #: GTG/plugins/rtm_sync/rtm_sync.py:191
 msgid ""
@@ -1052,8 +1056,7 @@ msgstr ""
 
 #: GTG/plugins/rtm_sync/rtmProxy.py:165
 msgid "saving critical object failed"
-msgstr ""
-"Erreur lors de la sauvegarde d'un object critique (pas très clair hein)"
+msgstr "Erreur lors de la sauvegarde d'un objet critique"
 
 #: GTG/plugins/rtm_sync/syncEngine.py:83
 msgid "Downloading task list..."
@@ -1061,7 +1064,7 @@ msgstr "Téléchargement de la liste des tâches..."
 
 #: GTG/plugins/rtm_sync/syncEngine.py:84
 msgid "Downloading..."
-msgstr ""
+msgstr "Téléchargement en cours..."
 
 #: GTG/plugins/rtm_sync/syncEngine.py:119
 msgid "Adding tasks to rtm.."
@@ -1081,7 +1084,7 @@ msgstr "Effacement des tâches de gtg..."
 
 #: GTG/plugins/rtm_sync/syncEngine.py:160
 msgid "Updating changed tasks.."
-msgstr ""
+msgstr "Mise à jour des tâches modifiées."
 
 #: GTG/plugins/rtm_sync/syncEngine.py:185
 #: GTG/plugins/rtm_sync/syncEngine.py:190
