--- a/po/ru.po
+++ b/po/ru.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-05-03 06:12+0000\n"
-"Last-Translator: DmDr <cardioexp@gmail.com>\n"
+"PO-Revision-Date: 2010-05-16 20:18+0000\n"
+"Last-Translator: Serfer <pavlov@tim.ua>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2010-05-04 03:43+0000\n"
+"X-Launchpad-Export-Date: 2010-05-20 05:28+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -117,7 +117,7 @@ msgstr "Возможно, произошла ошибка"
 
 #: GTG/tools/gtkcrashhandler.py:212
 msgid "_Details"
-msgstr ""
+msgstr "_Подробности"
 
 #: GTG/tools/gtkcrashhandler.py:218
 msgid "_Report this problem..."
@@ -152,7 +152,7 @@ msgstr[1] ""
 
 #: GTG/taskeditor/editor.py:332
 msgid "Due today!"
-msgstr ""
+msgstr "Задания на сегодня"
 
 #: GTG/taskeditor/editor.py:335
 #, python-format
@@ -568,6 +568,9 @@ msgid ""
 "href=\"http://bugs.edge.launchpad.net/gtg\">our Launchpad page</a>. If you "
 "have Apport installed, it will be started for you."
 msgstr ""
+" завершился ошибкой. Пожалуйста, сообщите об этой ошибке на <a "
+"href=\"http://bugs.edge.launchpad.net/gtg\">нашей странице в Launchpad</a>. "
+"Если у вас установлено приложение Apport, оно будет вызвано автоматически."
 
 #: GTG/core/task.py:53
 msgid "My new task"
@@ -599,6 +602,17 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link:"
 msgstr ""
+"Добро пожаловать в Getting Things Gnome!, ваш новый менеджер задач.\n"
+"\n"
+"В GTG всё есть задача. От постройки моста через Тихий Океан до смены "
+"лампочки или организации вечеринки. Когда вы редактируете задачу, она сразу "
+"же сохраняется.\n"
+"\n"
+"Когда задача выполнена, вы можете нажать кнопку \"Отметить выполнение\". "
+"Если задача более неактуальна, просто нажмите \"Отменить выполнение\".\n"
+"\n"
+"Задача может состоять из нескольких подзадач, которые видны как ссылки в "
+"описании. Просто нажмите на следующую ссылку:"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid ""
@@ -612,6 +626,15 @@ msgid ""
 "need to do the subtask anymore.\n"
 "Other stuff you should read:"
 msgstr ""
+"Как только вы ознакомитесь с вышеописанной подзадачей, отметьте ее "
+"выполнение. Если вы не намерены выполнять задачу, отмените ее. Выполненные и "
+"отмененные задачи хранятся на панели выполненных задач, которая по умолчанию "
+"скрыта. Однако в любой момент можно включить ее в меню Вид.\n"
+"\n"
+"Если вы закроете (то есть отметите выполненной или отмените выполнение) "
+"текущую задачу, подзадачи также будут закрыты. Действительно, можно "
+"посчитать, что, если вы выполнили данную задачу, вам не надо больше "
+"выполнять её подзадачи."
 
 #: GTG/core/firstrun_tasks.py:26
 msgid ""
@@ -621,6 +644,11 @@ msgid ""
 "\n"
 "Thank you for trying out GTG :-)"
 msgstr ""
+"Мы надеемся, вам понравится GTG. Пожалуйста, присылайте нам сообщения об "
+"ошибках и идеи по улучшению:\n"
+"    https://bugs.launchpad.net/gtg\n"
+"\n"
+"Благодарим за использование GTG :-)"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid "Learn how to use subtasks"
@@ -642,6 +670,22 @@ msgid ""
 "\n"
 "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
+"В описании задачи (этом окне) строка, начинающаяся с &quot;-&quot; создает "
+"подзадачу, нечто, что необходимо сделать для выполнения текущей задачи. "
+"Просто попробуйте написать &quot;- проверка подзадач&quot; на следующей "
+"строке и нажмите ввод.\n"
+"\n"
+"Также вы можете использовать кнопку инструментальной панели &quot;Добавить "
+"подзадачу&quot;.\n"
+"\n"
+"Задачи и подзадачи можно организовывать по-разному, просто  перетаскивая их "
+"в списке.\n"
+"\n"
+"С подзадачами связаны некоторые правила, к примеру, дата окончания "
+"выполнения подзадачи не может быть позже даты выполнения "
+"&quot;родительской&quot; задачи.\n"
+"\n"
+"Также, выполнение родительской задачи отметит выполнение всех подзадач."
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "Learn how to use tags"
@@ -676,6 +720,31 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Метка - это просто слово, начинающееся с \"@\".\n"
+"\n"
+"Попробуйте ввести слово, начав его с @, здесь:\n"
+"\n"
+"Оно станет жёлтым, это метка\n"
+"\n"
+"Метки полезны для сортировки ваших задач. В меню Вид вы можете "
+"активизировать Панель меток, на которой отображены все используемые вами "
+"метки, так что вы можете с легкостью видеть задачи, назначенные заданной "
+"метке. Число меток, которые может иметь задача, неограничено.\n"
+"\n"
+"Вы можете перетащить одну метку на другую для создания их иерархии. "
+"Например, если вы перетащите метку @to_pay на метку @money, каждая задача с "
+"меткой @to_pay также появится в списке задач с меткой @money (но при этом "
+"сама метка @money добавлена в задачу не будет).\n"
+"\n"
+"При щелчке правой кнопкой на метке в боковой панели, вы также выбрать ее "
+"цвет. Это позволит вам сделать список задач более наглядным.\n"
+"\n"
+"Новая метка добавляется только к текущей задаче. Рекурсии тут нет и метка не "
+"применяется к имеющимся подзадачам. Однако, когда вы создаете новую "
+"подзадачу, она по умолчанию унаследует метки родительской задачи (это "
+"произойдет также в случае, если вы добавите метку к родительской задаче "
+"после создания подзадачи). Конечно, вы в любой момент можете изменить метки "
+"данной конкретной подзадачи. Они никогда не изменятся родительской задачей."
 
 #: GTG/core/firstrun_tasks.py:66
 msgid "Learn how to use the Workview"
@@ -701,6 +770,26 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"Если вы нажмёте кнопку &quot;Рабочий план&quot;, будут показаны только "
+"активные задачи.\n"
+"\n"
+"Что такое активные задачи? Это задачи, выполнение которых возможно "
+"непосредственно сейчас.\n"
+"\n"
+"Это задача, которая уже началась; то есть, дата начала исполнения которой "
+"уже наступила.\n"
+"\n"
+"Это задача не имеет открытых подзадач. То есть,  вы можете работать "
+"непосредственно по этой задаче.\n"
+"\n"
+"Таким образом, в списоке задач показывается только те задачи, которыми вы "
+"должны заниматься прямо сейчас.\n"
+"\n"
+"При использовании меток, вы можете щелкнуть правой кнопкой мыши по метке в "
+"боковой панели и выбрать скрытие задач, назначенных данной конкретной метке, "
+"в рабочем плане. Это очень полезно в случае, если у вас есть метка вроде "
+"&quot;когда-нибудь&quot;, используемую для задач, которые вы хотели бы "
+"выполнить, но не очень скоро."
 
 #: GTG/core/firstrun_tasks.py:82
 msgid "Learn how to use Plugins"
@@ -936,7 +1025,7 @@ msgstr "Носитель"
 
 #: GTG/viewmanager/preferences.glade.h:14
 msgid "Task _Backends:"
-msgstr ""
+msgstr "Целевые _Бэкенды"
 
 #: GTG/viewmanager/preferences.glade.h:15
 msgid "_About Plugin"
@@ -1654,18 +1743,6 @@ msgstr "Закроется через секунду"
 #~ msgstr ""
 #~ "Добавленные таким образом атрибуты, будут применены, но не будут "
 #~ "отображаться в заголовке."
-
-#~ msgid ""
-#~ "due:date or defer:date : This way you can apply a due date or a defer date. "
-#~ "date can be yyyy-mm-dd (for exemple 2009-04-01) or yyyymmdd (20090401) or "
-#~ "mmdd (0401, in this case the year is implicitly the current one) or today or "
-#~ "tomorrow or a weekday name (due:monday means due next Monday)"
-#~ msgstr ""
-#~ "До:дата или Отложить:дата : Таким образом задается дата выполнения или срок, "
-#~ "до которого откладывается, задача. Дата может быть в формате yyyy-mm-dd "
-#~ "(например, 2009-04-01), yyyymmdd (20090401) или mmdd (0401, в этом случае "
-#~ "используется ткущий год), либо можно указать сегодня, завтра или день недели "
-#~ "(до:понедельник означает до ближайшего понедельника)"
 
 #~ msgid "View Notes"
 #~ msgstr "Просмотреть заметки"
