--- a/po/nl.po
+++ b/po/nl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-04-27 20:51+0000\n"
-"Last-Translator: rob <Unknown>\n"
+"PO-Revision-Date: 2010-06-23 10:12+0000\n"
+"Last-Translator: puccha <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-04-28 03:44+0000\n"
+"X-Launchpad-Export-Date: 2010-06-24 03:47+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -101,6 +101,8 @@ msgid ""
 "We're terribly sorry. Could you help us fix the problem by reporting the "
 "crash?"
 msgstr ""
+"Het spijt ons enorm. Wilt u ons helpen het probleem op te lossen door de "
+"crash te rapporteren?"
 
 #: GTG/tools/gtkcrashhandler.py:169
 msgid "An error has occurred"
@@ -108,7 +110,7 @@ msgstr "Er is een fout opgetreden"
 
 #: GTG/tools/gtkcrashhandler.py:177
 msgid "It looks like an error has occurred."
-msgstr ""
+msgstr "Het lijkt er op dat er iets fout is gegaan."
 
 #: GTG/tools/gtkcrashhandler.py:212
 msgid "_Details"
@@ -116,11 +118,11 @@ msgstr "_Details"
 
 #: GTG/tools/gtkcrashhandler.py:218
 msgid "_Report this problem..."
-msgstr ""
+msgstr "Dit probleem _rapporteren..."
 
 #: GTG/tools/gtkcrashhandler.py:222
 msgid "_Ignore the error"
-msgstr ""
+msgstr "Nergeer de foutmeld_ing"
 
 #: GTG/taskeditor/editor.py:321
 #, python-format
@@ -140,19 +142,19 @@ msgstr[1] "Voltooid %(days)d dagen te vroeg"
 #, python-format
 msgid "Due tomorrow!"
 msgid_plural "%(days)d days left"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Te doen voor morgen!"
+msgstr[1] "%(days)d dagen over"
 
 #: GTG/taskeditor/editor.py:332
 msgid "Due today!"
-msgstr ""
+msgstr "Te doen voor vandaag!"
 
 #: GTG/taskeditor/editor.py:335
 #, python-format
 msgid "Due yesterday!"
 msgid_plural "Was %(days)d days ago"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Te doen voor gisteren!"
+msgstr[1] "was %(days)d dagen geleden"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "Closed on"
@@ -382,7 +384,7 @@ msgstr "Opnieuw"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Reset Color"
-msgstr ""
+msgstr "Herstel Kleur"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:35
 msgid "T_oolbar"
@@ -558,6 +560,9 @@ msgid ""
 "href=\"http://bugs.edge.launchpad.net/gtg\">our Launchpad page</a>. If you "
 "have Apport installed, it will be started for you."
 msgstr ""
+" is gecrashed. Rapporteer de fout op <a "
+"href=\"http://bugs.edge.launchpad.net/gtg\">onze Launchpad pagina</a>.  Als "
+"Apport is geïnstalleerd zal het voor u gestart worden."
 
 #: GTG/core/task.py:53
 msgid "My new task"
@@ -611,6 +616,11 @@ msgid ""
 "\n"
 "Thank you for trying out GTG :-)"
 msgstr ""
+"We hopen dat u GTG waardeerd. Ideeën voor verbetering en foutrapporten kunt "
+"u ons zenden via:\n"
+"    https://bugs.launchpad.net/gtg\n"
+"\n"
+"Bedankt voor het uitproberen van GTG :-)"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid "Learn how to use subtasks"
@@ -755,7 +765,7 @@ msgstr ""
 
 #: GTG/core/plugins/__init__.py:32
 msgid "Everything necessary to run this plugin is available."
-msgstr ""
+msgstr "Alle afhankelijkheden voor deze plugin zijn beschikbaar."
 
 #: GTG/core/plugins/__init__.py:33
 msgid "The plugin can not be loaded"
@@ -917,6 +927,8 @@ msgid ""
 " was found on the system, but it doesn't provide a dbus interface. the "
 "Tomboy/Gnote plugin will not work with it."
 msgstr ""
+" is gevonden op uw systeem maar ondersteund geen dbus. De Tomboy/Gnote "
+"plugin kan het niet gebruiken."
 
 #: GTG/plugins/tomboy/tomboy.py:241
 msgid "That note does not exist!"
@@ -944,7 +956,7 @@ msgstr "<b>Methode voor locatiebepaling</b>"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:2
 msgid "<b>Proximity Factor</b>"
-msgstr "<b>Proximity Factor</b>"
+msgstr "<b>Nabijheidsfactor</b>"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:3
 msgid ""
