--- a/po/cs.po
+++ b/po/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-04-16 03:58+0000\n"
-"Last-Translator: Roman Horník <Unknown>\n"
+"PO-Revision-Date: 2010-07-27 08:35+0000\n"
+"Last-Translator: Konki <pavel.konkol@seznam.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2010-04-17 04:22+0000\n"
+"X-Launchpad-Export-Date: 2010-07-28 03:47+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -26,15 +26,17 @@ msgstr "Dnes"
 #, python-format
 msgid "Yesterday"
 msgid_plural "%(days)d days ago"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Včera"
+msgstr[1] "Před %(days)d dny"
+msgstr[2] "Před %(days)d dny"
 
 #: GTG/tools/dates.py:57
 #, python-format
 msgid "Tomorrow"
 msgid_plural "In %(days)d days"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Zítra"
+msgstr[1] "Za %(days)d dny"
+msgstr[2] "Za %(days)d dní"
 
 #: GTG/tools/dates.py:96 GTG/tools/dates.py:138
 msgid "now"
@@ -86,15 +88,15 @@ msgstr "zítra"
 
 #: GTG/tools/dates.py:185
 msgid "next week"
-msgstr ""
+msgstr "příští týden"
 
 #: GTG/tools/dates.py:186
 msgid "next month"
-msgstr ""
+msgstr "příští měsíc"
 
 #: GTG/tools/dates.py:187
 msgid "next year"
-msgstr ""
+msgstr "příští rok"
 
 #: GTG/tools/gtkcrashhandler.py:58
 msgid ""
@@ -126,15 +128,17 @@ msgstr ""
 #, python-format
 msgid "Completed %(days)d day late"
 msgid_plural "Completed %(days)d days late"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Dokončeno o %(days)d den později"
+msgstr[1] "Dokončeno o %(days)d dnů později"
+msgstr[2] "Dokončeno o %(days)d dní později"
 
 #: GTG/taskeditor/editor.py:324
 #, python-format
 msgid "Completed %(days)d day early"
 msgid_plural "Completed %(days)d days early"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Dokončeno o %(days)d den dříve"
+msgstr[1] "Dokončeno o %(days)d dnů dříve"
+msgstr[2] "Dokončeno o %(days)d dní dříve"
 
 #: GTG/taskeditor/editor.py:330
 #, python-format
@@ -197,7 +201,7 @@ msgstr "Brzy"
 
 #: GTG/taskeditor/taskeditor.glade.h:11
 msgid "Starting on"
-msgstr ""
+msgstr "Začíná"
 
 #: GTG/taskeditor/taskeditor.glade.h:12
 msgid "Task"
@@ -233,7 +237,7 @@ msgstr "Označit tento úkol jako téměř hotový"
 
 #: GTG/taskeditor/__init__.py:40
 msgid "Mark this task as not to be done anymore"
-msgstr ""
+msgstr "Označit tento úkol jako, že nemá být nikdy dokončen"
 
 #: GTG/taskeditor/__init__.py:42
 msgid "Permanently remove this task"
@@ -327,12 +331,27 @@ msgid ""
 "Getting Things Gnome!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
+"Getting Things Gnome! je svobodný software; můžete ho dále distribuovat "
+"a/nebo ho upravovat pod GNU General Public License jako publikovaný Free "
+"Software Foundation; buďto verze 3 Licence, nebo (dle vašeho úsudku) "
+"jakoukoliv pozdější verzí\n"
+"\n"
+"Getting Things Gnome! je distribuováno v naději, ze bude užitečný, ale BEZ "
+"JAKÉKOLIV ZÁRUKY; without even the implied warranty of MERCHANTABILITY or "
+"FITNESS FOR A PARTICULAR PURPOSE. Prohlédněte si GNU General Public License "
+"pro více detailů. \n"
+"\n"
+"Měli by jste obdržet kopii GNU General Public License spolu s Getting Things "
+"Gnome!; Pokud ne, napište na Free Software Foundation, Inc., 51 Franklin "
+"Street, Fifth Floor, Boston, MA 02110-1301, USA."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:24
 msgid ""
 "Hint: you can add several tags by separating them with\n"
 "commas."
 msgstr ""
+"Tip: můžete přidat více štítků jejich oddělením \n"
+"čárkami."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:26
 msgid "Mark as Done"
@@ -368,7 +387,7 @@ msgstr "Znovu"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Reset Color"
-msgstr ""
+msgstr "Obnovit barvu"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:35
 msgid "T_oolbar"
@@ -445,19 +464,19 @@ msgstr "_Pracovní zobrazení"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:53
 msgid "_tomorrow"
-msgstr ""
+msgstr "_zítra"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:54
 msgid "next _month"
-msgstr ""
+msgstr "příští _měsíc"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:55
 msgid "next _week"
-msgstr ""
+msgstr "příští týden"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:56
 msgid "next _year"
-msgstr ""
+msgstr "příští _rok"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:57
 msgid "t_oday"
@@ -473,7 +492,7 @@ msgstr "Označit vybraný úkol jako k dokončení"
 
 #: GTG/taskbrowser/__init__.py:41
 msgid "Mark the task as not to be done anymore"
-msgstr ""
+msgstr "Označit tento úkol, jako že již nikdy nemá být dokončen"
 
 #: GTG/taskbrowser/__init__.py:44
 msgid "Permanently remove the selected task"
@@ -493,7 +512,7 @@ msgstr ""
 
 #: GTG/taskbrowser/browser.py:570
 msgid "no active tasks"
-msgstr ""
+msgstr "žádné aktivní úkoly"
 
 #: GTG/taskbrowser/browser.py:572
 #, python-format
@@ -508,11 +527,11 @@ msgstr "značky"
 
 #: GTG/taskbrowser/browser.py:955
 msgid "tag"
-msgstr ""
+msgstr "popisek"
 
 #: GTG/taskbrowser/browser.py:961
 msgid "defer"
-msgstr ""
+msgstr "odložit"
 
 #: GTG/taskbrowser/browser.py:966
 msgid "due"
@@ -524,7 +543,7 @@ msgstr "Název"
 
 #: GTG/taskbrowser/tasktree.py:359
 msgid "Start date"
-msgstr ""
+msgstr "Datum zahájení"
 
 #: GTG/taskbrowser/tasktree.py:371
 msgid "Due"
@@ -536,7 +555,7 @@ msgstr "Datum ukončení"
 
 #: GTG/gtg.py:86
 msgid "gtg is already running!"
-msgstr "GTG již běží!"
+msgstr "gtg již běží!"
 
 #: GTG/gtg.py:110
 msgid ""
@@ -600,7 +619,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:34
 msgid "Learn how to use subtasks"
-msgstr ""
+msgstr "Naučit se jak používat podúkoly"
 
 #: GTG/core/firstrun_tasks.py:35
 msgid ""
@@ -621,7 +640,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "Learn how to use tags"
-msgstr ""
+msgstr "Naučit se jak používat popisky"
 
 #: GTG/core/firstrun_tasks.py:49
 msgid ""
@@ -655,7 +674,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:66
 msgid "Learn how to use the Workview"
-msgstr ""
+msgstr "Naučit se jak používat Pracovní náhled"
 
 #: GTG/core/firstrun_tasks.py:67
 msgid ""
@@ -680,7 +699,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:82
 msgid "Learn how to use Plugins"
-msgstr ""
+msgstr "Naučit se používat zásuvné moduly"
 
 #: GTG/core/firstrun_tasks.py:83
 msgid ""
@@ -694,7 +713,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:92
 msgid "Reporting bugs"
-msgstr ""
+msgstr "Hlášení chyb"
 
 #: GTG/core/firstrun_tasks.py:93
 msgid ""
@@ -745,15 +764,15 @@ msgstr ""
 
 #: GTG/core/plugins/__init__.py:33
 msgid "The plugin can not be loaded"
-msgstr ""
+msgstr "Zásuvný modul nemohl být načten."
 
 #: GTG/core/plugins/__init__.py:34
 msgid "Some python modules are missing"
-msgstr ""
+msgstr "Chybí některé moduly pythonu"
 
 #: GTG/core/plugins/__init__.py:35
 msgid "Please install the following python modules:"
-msgstr ""
+msgstr "Prosím nainstalujte následující moduly pythonu:"
 
 #: GTG/core/plugins/__init__.py:37
 msgid "Some remote dbus objects are missing."
@@ -786,32 +805,32 @@ msgstr ""
 
 #: GTG/viewmanager/delete_dialog.py:59
 msgid "Are you sure you want to delete this task?"
-msgstr ""
+msgstr "Jste si jistí, že chcete smazat tento úkol?"
 
 #: GTG/viewmanager/delete_dialog.py:60
 msgid "Keep selected task"
-msgstr ""
+msgstr "Ponech vybraný úkol"
 
 #: GTG/viewmanager/delete_dialog.py:61
 msgid "Permanently remove task"
-msgstr ""
+msgstr "Permanentně odstranit úkol"
 
 #: GTG/viewmanager/delete_dialog.py:63
 msgid ""
 "Deleting a task cannot be undone, and will delete the following tasks: "
-msgstr ""
+msgstr "Smazání úkolu nemůže být vzato zpět a smaže následující úkol: "
 
 #: GTG/viewmanager/delete_dialog.py:64
 msgid "Are you sure you want to delete these tasks?"
-msgstr ""
+msgstr "Opravdu chcete smazat tyto úkoly?"
 
 #: GTG/viewmanager/delete_dialog.py:65
 msgid "Keep selected tasks"
-msgstr ""
+msgstr "Ponech vybrané úkoly"
 
 #: GTG/viewmanager/delete_dialog.py:66
 msgid "Permanently remove tasks"
-msgstr ""
+msgstr "Trvale odstranit úkoly"
 
 #: GTG/viewmanager/preferences.glade.h:1
 msgid "<b>Dependencies</b>"
@@ -911,7 +930,7 @@ msgstr ""
 
 #: GTG/plugins/notification_area/notification_area.py:209
 msgid "_View Main Window"
-msgstr ""
+msgstr "_Zobrazit hlavní okno"
 
 #: GTG/plugins/notification_area/notification_area.py:217
 msgid "Add _New Task"
