Include mention of the code documentation available online

--- a/README
+++ b/README
@@ -80,3 +80,4 @@ Please refer to http://gtg.fritalk.com/pages/documentation
  * GTG Website: http://gtg.fritalk.com/
  * GTG project page on Launchpad: https://launchpad.net/gtg
  * GTG Wiki: http://live.gnome.org/gtg/
+ * GTG code documentation:  http://allievi.sssup.it/GTG/
