--- a/HACKING
+++ b/HACKING
@@ -2,6 +2,11 @@
 GTG Hacking Guide
 =================
 
+Code reference documentation is online at:
+
+   http://allievi.sssup.it/GTG/
+
+
 Testing
 -------
 
