Fixed crash traceback that's shown when pressing 'delete' key
Patch from Jeff Oliver (LP: #583103)  Thanks!

--- a/AUTHORS
+++ b/AUTHORS
@@ -68,3 +68,4 @@ For 0.3:
 * Kees Cook <kees@ubuntu.com>
 * Marko Kevac <marko@kevac.org>
 * Volodymyr Floreskul <exufer@gmail.com>
+* Jeff Oliver <kaiserfro@gmail.com>
