--- a/doc/gtg.1
+++ b/doc/gtg.1
@@ -26,6 +26,9 @@ or if the crash handler is misbehaving.
 \fB-d\fB
 Debug mode.  Prints extra information to the console which may be useful
 for understanding and reporting bugs.
+.TP
+\fB-v\fB
+Prints version and exits.
 .SH COPYRIGHT
 This manual page is Copyright 2009 Luca Falavigna <dktrkranz@debian.org>.
 Permission is granted to copy, distribute and/or modify this document
