Update CHANGELOG and AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -69,3 +69,4 @@ For 0.3:
 * Marko Kevac <marko@kevac.org>
 * Volodymyr Floreskul <exufer@gmail.com>
 * Jeff Oliver <kaiserfro@gmail.com>
+* Jonathan Barnoud <jonathan@barnoud.net>
