--- a/po/fr.po
+++ b/po/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-05-05 12:50+0000\n"
-"Last-Translator: Nicolas Delvaux <Unknown>\n"
+"PO-Revision-Date: 2010-08-17 08:18+0000\n"
+"Last-Translator: Emilien Klein <emilien+ubuntu@klein.st>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2010-05-06 04:05+0000\n"
+"X-Launchpad-Export-Date: 2010-08-18 06:59+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -101,18 +101,20 @@ msgid ""
 "We're terribly sorry. Could you help us fix the problem by reporting the "
 "crash?"
 msgstr ""
+"Nous sommes terriblement désolés. Pourriez-vous nous aider à corriger ce "
+"problème en envoyant un rapport d'erreur ?"
 
 #: GTG/tools/gtkcrashhandler.py:169
 msgid "An error has occurred"
-msgstr ""
+msgstr "Une erreur est survenue"
 
 #: GTG/tools/gtkcrashhandler.py:177
 msgid "It looks like an error has occurred."
-msgstr ""
+msgstr "Il semble qu'une erreur soit survenue."
 
 #: GTG/tools/gtkcrashhandler.py:212
 msgid "_Details"
-msgstr ""
+msgstr "_Détails"
 
 #: GTG/tools/gtkcrashhandler.py:218
 msgid "_Report this problem..."
@@ -120,7 +122,7 @@ msgstr ""
 
 #: GTG/tools/gtkcrashhandler.py:222
 msgid "_Ignore the error"
-msgstr ""
+msgstr "_Ignorer l'erreur"
 
 #: GTG/taskeditor/editor.py:321
 #, python-format
@@ -140,19 +142,19 @@ msgstr[1] "Terminée %(days)d jours en avance"
 #, python-format
 msgid "Due tomorrow!"
 msgid_plural "%(days)d days left"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Pour demain !"
+msgstr[1] "%(days)d jours restants"
 
 #: GTG/taskeditor/editor.py:332
 msgid "Due today!"
-msgstr ""
+msgstr "Pour aujourd'hui !"
 
 #: GTG/taskeditor/editor.py:335
 #, python-format
 msgid "Due yesterday!"
 msgid_plural "Was %(days)d days ago"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Pour hier !"
+msgstr[1] "Il y a %(days)d jours"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "Closed on"
@@ -561,6 +563,9 @@ msgid ""
 "href=\"http://bugs.edge.launchpad.net/gtg\">our Launchpad page</a>. If you "
 "have Apport installed, it will be started for you."
 msgstr ""
+" à planté. Veuillez reporter le bogue sur <a "
+"href=\"http://bugs.edge.launchpad.net/gtg\">notre page Launchpad</a>. Si "
+"Apport est installé, celui-ci démarrera automatiquement."
 
 #: GTG/core/task.py:53
 msgid "My new task"
