--- a/AUTHORS
+++ b/AUTHORS
@@ -70,3 +70,4 @@ For 0.3:
 * Volodymyr Floreskul <exufer@gmail.com>
 * Jeff Oliver <kaiserfro@gmail.com>
 * Thibault Fevry <https://edge.launchpad.net/~thibaultfevry> (no email provided)
+* Andrew Starr-Bochicchio <andrewsomething@ubuntu.com>
